--- a/tz-local/resource/elk/kb_values.yaml
+++ b/tz-local/resource/elk/kb_values.yaml
@@ -25,6 +25,7 @@ kibanaConfig:
     xpack.security.session.idleTimeout: 30m
     xpack.security.audit.enabled: true
     enterpriseSearch.host: "https://elasticsearch-master.elk.svc.cluster.local:3002"
+    server.publicBaseUrl: "https://kibana.tztest.com"
 
     xpack.encryptedSavedObjects.encryptionKey: aa577b2137923c4d5e7c94db27319f39
     xpack.reporting.encryptionKey: dc54b2346d58f62ac8f7df50bfe16979
@@ -128,9 +129,10 @@ service:
 #    - host: kibana.elk.eks_project.tztest.com
 #      paths:
 #      - path: /
-#        backend:
-#          serviceName: kibana-kibana
-#          servicePort: 5601
+#        defaultBackend:
+#          service:
+#            name: kibana-kibana
+#            port: 5601
 
 readinessProbe:
   failureThreshold: 3
