--- a/tz-local/resource/ingress_nginx/values.yaml
+++ b/tz-local/resource/ingress_nginx/values.yaml
@@ -12,6 +12,8 @@ controller:
 
   service:
     externalTrafficPolicy: "Local"
+    type: LoadBalancer
+    loadBalancerSourceRanges: allowed_management_cidr_blocks
 
   config:
     enable-real-ip: "true"
