--- a/tz-local/resource/elk/elk-ingress.yaml
+++ b/tz-local/resource/elk/elk-ingress.yaml
@@ -1,42 +1,46 @@
-apiVersion: networking.k8s.io/v1beta1
-kind: Ingress
-metadata:
-  name: ingress-elasticsearch
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-`
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
-    nginx.ingress.kubernetes.io/proxy_connect_timeout: "300"
-    nginx.ingress.kubernetes.io/proxy-body-size: 100m
-
-spec:
-  rules:
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: ingress-elasticsearch
+#  annotations:
+#    kubernetes.io/ingress.class: "nginx"
+#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+##    kubernetes.io/tls-acme: "true"
+##    nginx.ingress.kubernetes.io/proxy-ssl-secret: "resources/elastic-certificate-pem"  => need to point to ES certificate pem.
+##    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"  => must be false if you use elasticsearch-utils to generate CA.
+##    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" => must be HTTPS
+#spec:
+#  rules:
 #  - host: es.eks_domain
 #    http:
 #      paths:
 #      - path: /
+#        pathType: Prefix
 #        backend:
-#          serviceName: elasticsearch-master
-#          servicePort: 9200
-  - host: es.elk.eks_project.eks_domain
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: elasticsearch-master
-          servicePort: 9200
-  tls:
-    - hosts:
+#          service:
+#            name: elasticsearch-master
+#            port:
+#              number: 9200
+#  - host: es.elk.eks_project.eks_domain
+#    http:
+#      paths:
+#      - path: /
+#        pathType: Prefix
+#        backend:
+#          service:
+#            name: elasticsearch-master
+#            port:
+#              number: 9200
+#  tls:
+#    - hosts:
 #        - es.eks_domain
-        - es.elk.eks_project.eks_domain
-      secretName: ingress-elasticsearch-tls
+#        - es.elk.eks_project.eks_domain
+#      secretName: ingress-elasticsearch-tls
 
 ---
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-kibana
@@ -46,54 +50,63 @@ metadata:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   rules:
-#  - host: kibana.eks_domain
-#    http:
-#      paths:
-#      - path: /
-#        backend:
-#          serviceName: kibana-kibana
-#          servicePort: 5601
+  - host: kibana.eks_domain
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: kibana-kibana
+            port:
+              number: 5601
   - host: kibana.elk.eks_project.eks_domain
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: kibana-kibana
-          servicePort: 5601
+          service:
+            name: kibana-kibana
+            port:
+              number: 5601
   tls:
     - hosts:
-#        - kibana.eks_domain
+        - kibana.eks_domain
         - kibana.elk.eks_project.eks_domain
       secretName: ingress-kibana-tls
 
 ---
-#
-#apiVersion: networking.k8s.io/v1beta1
-#kind: Ingress
-#metadata:
-#  name: ingress-logstash
-#  annotations:
-#    kubernetes.io/ingress.class: "nginx"
-##    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-##    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-#spec:
-#  rules:
-##  - host: logstash.eks_domain
-##    http:
-##      paths:
-##      - path: /
-##        backend:
-##          serviceName: logstash-logstash
-##          servicePort: 5044
-#  - host: logstash.elk.eks_project.eks_domain
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-logstash
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+spec:
+  rules:
+#  - host: logstash.eks_domain
 #    http:
 #      paths:
 #      - path: /
 #        backend:
 #          serviceName: logstash-logstash
 #          servicePort: 5044
-##  tls:
-##    - hosts:
-##        - logstash.eks_domain
-##        - logstash.elk.eks_project.eks_domain
-##      secretName: ingress-logstash-tls
+  - host: logstash.elk.eks_project.eks_domain
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: logstash-logstash
+            port:
+              number: 5044
+#  tls:
+#    - hosts:
+#        - logstash.eks_domain
+#        - logstash.elk.eks_project.eks_domain
+#      secretName: ingress-logstash-tls
