--- a/tz-local/resource/elk/reindex/filebeat_new.yml
+++ b/tz-local/resource/elk/reindex/filebeat_new.yml
@@ -28,7 +28,7 @@ output.elasticsearch:
   ssl.verification_mode: none
   hosts: ["elasticsearch-master.elk.svc.cluster.local:9200"]
   username: 'elastic'
-  password: 'Dlwpdldps!323'
+  password: 'xxxx'
   pipeline: test_new_index
   index: "test_%{[dissect.account]}-%{[dissect.yyyymm]}"
 
