upgrade eks version

--- a/tz-local/resource/elk/es_data_values.yaml
+++ b/tz-local/resource/elk/es_data_values.yaml
@@ -153,7 +153,7 @@ esConfig:
             starttls.required: true
             host: smtp.gmail.com
             port: 587
-            user: devops@tz.gg
+            user: devops@tz.com
 
     xpack.notification.email.account:
       gmail_account:
@@ -164,7 +164,7 @@ esConfig:
           starttls.required: true
           host: smtp.gmail.com
           port: 587
-          user: devops@tz.gg
+          user: devops@tz.com
 
     xpack.notification.slack:
       account:
