--- a/tz-local/resource/elk/es_values.yaml
+++ b/tz-local/resource/elk/es_values.yaml
@@ -171,7 +171,7 @@ esConfig:
             starttls.required: true
             host: smtp.gmail.com
             port: 587
-            user: devops@tz.gg
+            user: devops@tz.com
 
     xpack.notification.email.account:
       gmail_account:
@@ -182,7 +182,7 @@ esConfig:
           starttls.required: true
           host: smtp.gmail.com
           port: 587
-          user: devops@tz.gg
+          user: devops@tz.com
 
     xpack.notification.slack:
       account:
