--- a/tz-local/resource/ingress_nginx/dns01/letsencrypt-prod.yaml
+++ b/tz-local/resource/ingress_nginx/dns01/letsencrypt-prod.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: devops@tz.gg
+    email: devops@tz.com
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
