--- a/tz-local/resource/ingress_nginx/internal/letsencrypt-staging.yaml
+++ b/tz-local/resource/ingress_nginx/internal/letsencrypt-staging.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: devops@tz.gg
+    email: devops@tz.com
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
